--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./src/main.jsx"></script>
+    <script src="./src/main.jsx" type="module"></script>
   </body>
 </html> 
 
