--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,8 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="javascript" src="./src/main.jsx" ></script>
+    <script type="module" > </script>
+    <script src="./src/main.jsx" ></script>
   </body>
 </html> 
 
