--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,8 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" crossorigin src="/src/main.jsx"></script>
+    <script type="module" crossorigin src="src/main.jsx"></script>
+
   </body>
 </html> 
 
