--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,6 +1,7 @@
  <!doctype html>
 <html lang="en">
   <head>
+    <base href ="/">
     <meta charset="UTF-8" />
      <link rel="icon" type="image/svg+xml" href="/vite.svg" /> 
      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,7 +10,8 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+  <script src= "/src/main.jsx" type="text/javascript"></script>
+   
   </body>
 </html> 
 
